--- a/css/responsive.css
+++ b/css/responsive.css
@@ -74,7 +74,7 @@
 
   .server_section {
     background: none;
-    background-color: #000080;
+    background-color: #F0FAFF;
   }
 
   .server_section .img-box {
