--- a/css/responsive.css
+++ b/css/responsive.css
@@ -74,7 +74,7 @@
 
   .server_section {
     background: none;
-    background-color: #F0FAFF;
+    background-color: #D2F2FA;
   }
 
   .server_section .img-box {
