--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Roboto", sans-serif;
   color: #0c0c0c;
-  background-color: #f8f8f8;
+  background-color: #E8F9FD;
   overflow-x: hidden;
 }
 
@@ -122,7 +122,7 @@ a:focus {
 /*header section*/
 .hero_area {
   position: relative;
-  background-color: #F0FAFF;
+  background-color: #D2F2FA;
   min-height: 100vh;
   padding-top: 80px;
   display: -webkit-box;
@@ -143,7 +143,7 @@ a:focus {
   top: 0;
   left: 0;
   width: 100%;
-  background: #F0FAFF;
+  background: #D2F2FA;
   z-index: 1000;
 }
 
@@ -494,7 +494,7 @@ a:focus {
 }
 
 .server_section {
-  background: linear-gradient(110deg, transparent 25%, #F0FAFF 25%);
+  background: linear-gradient(110deg, transparent 25%, #D2F2FA 25%);
   padding: 55px 0;
   color: #000000;
 }
@@ -945,7 +945,7 @@ a:focus {
 
 /* info section */
 .info_section {
-  background-color: #F0FAFF;
+  background-color: #D2F2FA;
   color: #000000;
 }
 
@@ -1164,7 +1164,7 @@ a:focus {
 /* footer section*/
 .footer_section {
   position: relative;
-  background-color: #F0FAFF;
+  background-color: #D2F2FA;
   text-align: center;
 }
 
