--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 $white: #ffffff;
 $black: #000000;
 $primary1: #1BB3E1;
-$primary2: #0080BB;
+$primary2: #1AB3E0;
 $textCol: #999;
 
 @mixin main-font {
@@ -461,196 +461,6 @@ a:focus {
 }
 
 // end service section
-
-// server section
-
-.server_section {
-  background: linear-gradient(110deg, transparent 25%, #D2F2FA 25%);
-  padding: 55px 0;
-  color: $white;
-
-  .row {
-    align-items: center;
-  }
-
-  .img-box {
-    position: relative;
-
-    img {
-      width: 100%;
-    }
-
-    .play_btn {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 65px;
-      height: 65px;
-      transform: translate(-50%, -50%);
-      border: none;
-
-
-      button {
-        background-color: transparent;
-        border: none;
-        background-color: $primary1;
-        color: $white;
-        width: 100%;
-        height: 100%;
-        border-radius: 100%;
-        position: relative;
-        z-index: 3;
-        outline: none;
-      }
-
-      &:before,
-      &:after {
-        content: "";
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        background-color: $primary1;
-        opacity: 1;
-        border-radius: 100%;
-        transform: translate(-50%, -50%);
-      }
-
-      &:before {
-        z-index: 2;
-        animation: before-animation 1500ms infinite;
-      }
-
-      &:after {
-        z-index: 1;
-        animation: after-animation 1500ms infinite;
-      }
-    }
-
-    @keyframes before-animation {
-      0% {
-        transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
-        opacity: 1;
-      }
-
-      100% {
-        transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
-        opacity: 0;
-      }
-
-    }
-
-    @keyframes after-animation {
-      0% {
-        transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
-        opacity: 1;
-      }
-
-      100% {
-        transform: translateX(-50%) translateY(-50%) translateZ(0) scale(2);
-        opacity: 0;
-      }
-
-    }
-  }
-
-  .detail-box {
-    a {
-      @include hero_btn($primary2, $white, 10px, 45px, 5px);
-      margin-top: 25px;
-    }
-  }
-}
-
-// end server section
-
-// price section
-
-.price_section {
-
-  .price_container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    text-align: center;
-
-    .box {
-      margin: 45px 15px 0 15px;
-
-      .detail-box {
-        width: 300px;
-        padding: 40px 20px 15px 20px;
-        background-color: #fff;
-        border-radius: 25px;
-        box-shadow: 0 0 5px 0 rgba($color: #000000, $alpha: .1);
-
-        h2 {
-          font-weight: bold;
-
-          span {
-            font-size: 3rem;
-          }
-        }
-
-        h6 {
-          text-transform: uppercase;
-          color: $primary1;
-          font-size: 20px;
-          margin-bottom: 10px;
-        }
-      }
-
-      .price_features {
-        padding: 0;
-        list-style-type: none;
-
-        li {
-          margin: 10px 0;
-        }
-      }
-
-      .btn-box {
-        margin-top: 25px;
-
-
-
-        a {
-          @include hero_btn($primary2, $white, 10px, 35px, 5px);
-          border: none;
-
-          &:hover {
-            background-color: $primary1;
-            color: $white;
-          }
-        }
-      }
-
-      &:hover {
-        color: $white;
-
-        .detail-box {
-          background-color: $primary1;
-        }
-
-        h6 {
-          color: $white;
-        }
-
-        a {
-          background-color: $primary1;
-          color: $white;
-        }
-      }
-    }
-  }
-}
-
-
-// end answer section
 
 // client section
 
